[gd_scene load_steps=8 format=3 uid="uid://d38g2s0v7jlli"]

[ext_resource type="Script" uid="uid://dq5k373ktrxtp" path="res://스크립트/main_menu.gd" id="1_825h1"]
[ext_resource type="PackedScene" uid="uid://bqjrcv8cvyxan" path="res://배경화면/배경화면.tscn" id="2_jxjs1"]
[ext_resource type="PackedScene" uid="uid://74gg8nboq4lp" path="res://배경화면/Background.tscn" id="3_kc2ib"]
[ext_resource type="FontFile" uid="uid://d0m6w61eye8j" path="res://에셋/폰트/Sam3KRFont.ttf" id="4_8dtt4"]
[ext_resource type="FontFile" uid="uid://cfyd7jhx885x8" path="res://에셋/폰트/DOSGothic.ttf" id="5_3fkf2"]
[ext_resource type="PackedScene" uid="uid://bf4aj2ggupfos" path="res://시작화면/StoryPanel.tscn" id="6_ryr5x"]

[sub_resource type="LabelSettings" id="LabelSettings_jx0ly"]
font = ExtResource("4_8dtt4")
font_size = 70
font_color = Color(0.208349, 0.230306, 0.38484, 1)
outline_size = 5
outline_color = Color(0.00184107, 0.00184107, 0.00184107, 1)
shadow_size = 5
shadow_color = Color(0, 0, 0, 0.882353)
shadow_offset = Vector2(3, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_825h1")

[node name="Background" parent="." instance=ExtResource("2_jxjs1")]

[node name="Background2" parent="Background" instance=ExtResource("3_kc2ib")]

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -135.0
offset_top = -174.0
offset_right = 135.0
offset_bottom = -117.0
grow_horizontal = 2
grow_vertical = 2
text = "30층 던전"
label_settings = SubResource("LabelSettings_jx0ly")

[node name="StartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -51.5
offset_top = 69.0
offset_right = 51.5
offset_bottom = 99.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_3fkf2")
theme_override_font_sizes/font_size = 21
text = "게임 시작"

[node name="OptionButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = 121.0
offset_right = 25.0
offset_bottom = 151.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_3fkf2")
theme_override_font_sizes/font_size = 21
text = "옵션"

[node name="ExitButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = 169.0
offset_right = 25.0
offset_bottom = 199.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_3fkf2")
theme_override_font_sizes/font_size = 21
text = "종료"

[node name="StoryPanel" parent="." instance=ExtResource("6_ryr5x")]

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
